feat, dev: оптимизация проверки файлов. Облегчение структуры LauncherService
Изменения:
1. LauncherService больше не God-Object, логика вынесена в 'component' пакет.
2. Логика сборки команд теперь в GameCommandBuilder.
3. Логика Classpath (с нативами и фильтрами) в ClasspathProvider.